# DeutschLerner

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: README.md  pubspec.yaml
app/android/app/: build.gradle
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/screens/: daily_plan_screen.dart  grammar_screen.dart  home_screen.dart  learn_screen.dart  settings_screen.dart  setup_screen.dart  vocabulary_screen.dart
app/lib/services/: api_service.dart  tts_service.dart
app/linux/: CMakeLists.txt
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
docs/: german-curriculum-research.md
prompts/: heartbeat_a1.md  heartbeat_topic.md  sentence_practice.md  topic_generation.md  vocabulary_practice.md
scripts/: deploy.sh  setup.sh
src/ai/: base.py  claude_api.py  claude_cli.py  deepseek_api.py  factory.py  gemini_api.py  kimi_api.py  openai_api.py
src/api/: dependencies.py  middleware.py  server.py
src/api/routes/: chapter.py  (+10 more)
src/cli/: interactive.py
src/core/: engine.py  marker.py  memory.py  topic_generator.py
src/heartbeat/: curriculum.py  dispatcher.py  scheduler.py  topic_selector.py
src/notifications/: base.py  discord_bot.py  whatsapp.py
src/storage/: database.py  migrations.py  models.py  repository.py
tests/: conftest.py  test_ai_providers.py  test_api.py  test_engine.py  test_heartbeat.py  test_marker.py  test_memory.py  test_notifications.py
(+8 files in other folders)
